--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -1,3 +1,4 @@
+const Pkg = require('../package.json');
 
 // Use these settings if connecting to a server using http
 const API_ROOT_URL = `http://localhost:8000/sealog-server`;
@@ -27,7 +28,7 @@ const LOGIN_IMAGE = "";
 const MAIN_SCREEN_TXT = "Please select a cruise from the list below.  Once a cruise is selected please select a lowering from the list of lowerings associated with that cruise that appear at the bottom of the cruise information panel.  Selecting a lowering will open the lowering information panel.  At the bottom of the cruise information panel there will be links for proceeding to the lowering replay section, the lowering review section and the lowering gallery section of Sealog. If at any time you wish to return to this page please click the \"Review Cruises/Lowerings\" text in upper navigation bar.";
 
 // Title displayed on the left side of the title bar
-const HEADER_TITLE = "Sealog - Vehicle";
+const HEADER_TITLE = `Sealog for Vehicles v${Pkg.version}`;
 
 // Set default vessel
 const DEFAULT_VESSEL = "";
