--- a/package.json
+++ b/package.json
@@ -30,45 +30,48 @@
     "@hapi/nes": "^11.2.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
-    "connected-react-router": "^6.7.0",
-    "filepond": "^4.11.0",
-    "highcharts": "^7.2.0",
-    "highcharts-react-official": "^2.2.2",
+    "connected-react-router": "^6.8.0",
+    "filepond": "^4.13.0",
+    "highcharts": "^8.0.4",
+    "highcharts-react-official": "^3.0.0",
+    "immutable": "^3.8.2",
+    "jquery": "^3.4.1",
     "js-file-download": "^0.4.10",
     "leaflet": "^1.5.1",
     "moment": "^2.24.0",
     "moment-duration-format": "^2.3.2",
     "path": "^0.12.7",
-    "rc-slider": "^8.7.1",
-    "react": "^16.13.0",
+    "rc-slider": "^9.2.3",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-copy-to-clipboard": "^5.0.1",
     "react-datetime": "^2.16.3",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.12.0",
     "react-file-reader": "^1.1.4",
     "react-filepond": "^7.0.1",
     "react-google-recaptcha": "^2.0.1",
-    "react-leaflet": "^2.6.1",
+    "react-leaflet": "^2.6.3",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.0",
+    "redux-form": "^8.3.1",
     "redux-modal": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "seamless-immutable": "^7.1.4",
     "typeface-roboto": "0.0.75",
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
-    "@babel/runtime": "^7.8.4",
+    "@babel/runtime": "^7.8.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -76,12 +79,12 @@
     "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-redux": "^3.0.3",
-    "file-loader": "^4.2.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.1.3",
-    "webpack": "^4.41.6",
+    "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
