--- a/webpack.config.js.dist
+++ b/webpack.config.js.dist
@@ -4,6 +4,7 @@ const CopyPlugin = require('copy-webpack-plugin');
 const HtmlWebpackPlugin = require('html-webpack-plugin')
 
 module.exports = {
+  // devtool: 'source-map',
   entry: './src/index.js',
   output: {
     filename: '[name].bundle.js',
@@ -51,8 +52,8 @@ module.exports = {
           },
           { loader: 'file-loader',
             options: {
-              outputPath: 'style/',
-              publicPath: ROOT_PATH + 'style/'
+              outputPath: 'style',
+              publicPath: ROOT_PATH + 'style'
             }
           }
         ]
@@ -63,8 +64,8 @@ module.exports = {
           loader: 'file-loader',
           options: {
             name: '[name].[ext]',
-            outputPath: 'style/fonts/',
-            publicPath: ROOT_PATH + 'style/fonts/'
+            outputPath: 'style/fonts',
+            publicPath: ROOT_PATH + 'style/fonts'
           }
         }]
       }
