Dynamically configure the Nginx path
The ROOT_PATH setting in client_config.js specifies the path that Sealog will
be served from.

This changes the Docker start.sh script to interrogate Node for the value of
ROOT_PATH, and then substitutes it into the Nginx configuration.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,10 @@ server {
     listen 80;
     server_name sealog-server;
 
-    # Some paths should be relative to ROOT_PATH in src/client_config.js.
-    location /sealog { # !!! ROOT_PATH with no trailing slash
+    # The start.sh script will replace %ROOT_PATH% with the value set in the
+    # client_config.js configuration file.
+    location %ROOT_PATH% {
         alias /usr/share/nginx/html/sealog;
-        try_files $uri $uri/ /sealog/index.html; # !!! ROOT_PATH
+        try_files $uri $uri/ %ROOT_PATH%/index.html;
     }
 }
