Serve the bundle in-place without copying
Prevously, we would copy the dist/ directory to /usr/share/nginx/html/sealog.
But if a volume was mapped into that directory by Docker, then we would have to
merge the directory structures.

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
     # The start.sh script will replace %ROOT_PATH% with the value set in the
     # client_config.js configuration file.
     location %ROOT_PATH% {
-        alias /usr/share/nginx/html/sealog;
+        alias /usr/src/app/dist;
         try_files $uri $uri/ %ROOT_PATH%/index.html;
     }
 }
