--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name sealog-server;
 
-    # The start.sh script will replace %ROOT_PATH% with the value set in the
-    # client_config.js configuration file.
+    # The /docker-entrypoint.d/99-build-sealog.sh script will replace
+    # %ROOT_PATH% with the value set in the client_config.js configuration file.
     location %ROOT_PATH% {
         alias /usr/src/app/dist;
         try_files $uri $uri/ %ROOT_PATH%/index.html;
