Fix nginx config when serving from the server root
This allows the Sealog ROOT_PATH to be either /sealog/ or / and nginx will
serve it correctly.

Thanks to Michael Hampton @error10!

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ server {
     # The /docker-entrypoint.d/99-build-sealog.sh script will replace
     # %ROOT_PATH% with the value set in the client_config.js configuration file.
     location %ROOT_PATH% {
-        alias /usr/src/app/dist;
+        alias /usr/src/app/dist/;
         try_files $uri $uri/ %ROOT_PATH%/index.html;
     }
 }
