--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sealog-client-vehicle",
-  "version": "1.0.12-rc",
+  "version": "1.0.13-rc",
   "license": "MIT",
   "description": "Sealog Client intended for use with vehicles deployed from research vessels such as ROVs, AUVs and HOVs",
   "bugs": {
@@ -29,33 +29,33 @@
   "dependencies": {
     "@hapi/nes": "^11.2.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.0",
     "connected-react-router": "^6.8.0",
-    "filepond": "^4.13.0",
-    "highcharts": "^8.0.4",
+    "filepond": "^4.18.0",
+    "highcharts": "^8.1.2",
     "highcharts-react-official": "^3.0.0",
     "immutable": "^3.8.2",
-    "jquery": "^3.4.1",
-    "js-file-download": "^0.4.10",
+    "jquery": "^3.5.1",
+    "js-file-download": "^0.4.12",
     "leaflet": "^1.5.1",
-    "moment": "^2.24.0",
+    "moment": "^2.27.0",
     "moment-duration-format": "^2.3.2",
     "path": "^0.12.7",
-    "rc-slider": "^9.2.3",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "rc-slider": "^9.3.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-copy-to-clipboard": "^5.0.1",
     "react-datetime": "^2.16.3",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-file-reader": "^1.1.4",
     "react-filepond": "^7.0.1",
-    "react-google-recaptcha": "^2.0.1",
-    "react-leaflet": "^2.6.3",
+    "react-google-recaptcha": "^2.1.0",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.1",
+    "redux-form": "^8.3.6",
     "redux-modal": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "seamless-immutable": "^7.1.4",
@@ -63,29 +63,29 @@
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@babel/runtime": "^7.8.7",
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/runtime": "^7.10.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.29",
+    "@fortawesome/free-solid-svg-icons": "^5.13.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.2",
+    "css-loader": "^3.6.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-redux": "^3.0.3",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
