Infer the server URL from the browser address
This simplifies deployment when Sealog client and server are hosted on the same
machine. It also handles the case where Sealog might be accessed from two
subnets, such as JasonNet and ScienceNet.

The change is a little obscure because we need to test to see if `window` is
defined. It is in the browser environment, but not in the Node environment the
application is built in. However, the client_config.js file is included by the
webpack config script, which executes in the Node environment, at which point
the attempt to access `window` fails.

Thanks to Muhammad Talha Akbar @dev-talha-akbar for pointing out the issue and
its solution.

--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -1,12 +1,10 @@
 const Pkg = require('../package.json');
 
-// Use these settings if connecting to a server using http
-const API_ROOT_URL = `http://localhost:8000/sealog-server`;
-const WS_ROOT_URL = `ws://localhost:8000/ws`;
-
-// Use these settings if connecting to a server using https
-// const API_ROOT_URL = `https://localhost:8000/sealog-server`;
-// const WS_ROOT_URL = `wss://localhost:8000/ws`;
+// Use https:// and wss:// for secure servers
+const API_ROOT_URL = (typeof window !== 'undefined') &&
+  `http://${window.location.hostname}:8000/sealog-server`;
+const WS_ROOT_URL = (typeof window !== 'undefined') &&
+  `ws://${window.location.hostname}:8000/ws`;
 
 // Change this if not hosting the client at the webserver's document root i.e. '/sealog/'
 const ROOT_PATH = "/sealog/";
