Allow deployment-specific configuration of image URLs
The Sealog server serves images at URLs based on IMAGE_ROUTE. However, a design
shortcoming is that the API does not reference images relative to IMAGE_ROUTE
but to IMAGE_PATH, the directory where the files are actually stored.

This means that the client needs to know how to translate between the server's
internal implementation details (i.e., how it stores images) and its public
interface (i.e., how it serves them).

Ideally this could be fixed by simply changing the server to always reference
images based on the public URL.

But this is a risky change because services running on the server host might
expect the Sealog API to return a path on the local filesystem. These services
will have to be audited for such cases and modified to retrieve images over the
API.

In the meantime, this patch allows a configurable get_image_url() function that
takes a path relative to IMAGE_PATH and transforms it to a URL where the image
can be retrieved.

This enables an important use case, which is requesting images through a
caching image proxy to reduce ship-to-shore bandwidth use.

--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -9,8 +9,16 @@ const WS_ROOT_URL = (typeof window !== 'undefined') &&
 // Change this if not hosting the client at the webserver's document root i.e. '/sealog/'
 const ROOT_PATH = "/sealog/";
 
-// Where the images are hosted on the webserver.
-const IMAGE_PATH = "/files/images";
+// This function constructs a URL to an image served by the Sealog server.
+// Normally, this should correspond to the server's IMAGE_ROUTE setting
+// (defined in routes/default.js).
+//
+// Override this function to serve images through alternate methods, such as a
+// caching proxy.
+function get_image_url(path) {
+  const IMAGE_ROUTE = "/files/images";
+  return API_ROOT_URL + IMAGE_ROUTE + path;
+}
 
 // Site customization
 // Add a reCaptcha site kit to enable recaptcha bot protection
@@ -44,7 +52,6 @@ module.exports = {
   API_ROOT_URL,
   WS_ROOT_URL,
   ROOT_PATH,
-  IMAGE_PATH,
   RECAPTCHA_SITE_KEY,
   LOGIN_SCREEN_TXT,
   LOGIN_IMAGE,
@@ -53,5 +60,6 @@ module.exports = {
   DEFAULT_VESSEL,
   USE_MAPTILE_PROXY,
   USE_ACCESS_CONTROL,
-  DISABLE_EVENT_LOGGING
+  DISABLE_EVENT_LOGGING,
+  get_image_url
 }
