changes per Buck's request

--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -28,10 +28,10 @@ const LOGIN_IMAGE = "";
 const MAIN_SCREEN_TXT = "Please select a cruise from the list below.  Once a cruise is selected please select a lowering from the list of lowerings associated with that cruise that appear at the bottom of the cruise information panel.  Selecting a lowering will open the lowering information panel.  At the bottom of the cruise information panel there will be links for proceeding to the lowering replay section, the lowering review section and the lowering gallery section of Sealog. If at any time you wish to return to this page please click the \"Review Cruises/Lowerings\" text in upper navigation bar.";
 
 // Title displayed on the left side of the title bar
-const HEADER_TITLE = `Sealog for Vehicles v${Pkg.version}`;
+const HEADER_TITLE = `Sealog for Nadir/Neptune v${Pkg.version}`;
 
 // Set default vessel
-const DEFAULT_VESSEL = "";
+const DEFAULT_VESSEL = "OceanXplorer1";
 
 // Use an internal tile server (true), or pull tiles directly from the Internet (false).
 const USE_MAPTILE_PROXY = false;
@@ -41,6 +41,8 @@ const USE_ACCESS_CONTROL = false;
 
 // Remove ability to add new events
 const DISABLE_EVENT_LOGGING = false;
+
+const LOWERING_ID_REGEX = RegExp(/NDR[0-9]{4}/);
 
 module.exports = {
   API_ROOT_URL,
@@ -55,5 +57,6 @@ module.exports = {
   DEFAULT_VESSEL,
   USE_MAPTILE_PROXY,
   USE_ACCESS_CONTROL,
-  DISABLE_EVENT_LOGGING
+  DISABLE_EVENT_LOGGING,
+  LOWERING_ID_REGEX
 }
