--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -42,10 +42,16 @@ const USE_ACCESS_CONTROL = false;
 // Remove ability to add new events
 const DISABLE_EVENT_LOGGING = false;
 
+// Placeholder text displayed in CruiseID textfield "i.e. OXR20210101"
+const CRUISE_ID_PLACEHOLDER = "";
+
+// RegExp object to use when verifying CruiseID i.e. RegExp(^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
+const CRUISE_ID_REGEX = null;
+
 // Placeholder text displayed in LoweringID textfield "i.e. CHR0001"
 const LOWERING_ID_PLACEHOLDER = "";
 
-// RegExp object to use when verifying LoweringID i.e. RegExp(/CHR[0-9]{4}/)
+// RegExp object to use when verifying LoweringID i.e. RegExp(/^CHR[0-9]{4}$/)
 const LOWERING_ID_REGEX = null;
 
 // What to call "cruise/cruises", format: null OR ["single version","plural version"] use lowercase
@@ -68,6 +74,8 @@ module.exports = {
   USE_MAPTILE_PROXY,
   USE_ACCESS_CONTROL,
   DISABLE_EVENT_LOGGING,
+  CRUISE_ID_PLACEHOLDER,
+  CRUISE_ID_REGEX,
   LOWERING_ID_PLACEHOLDER,
   LOWERING_ID_REGEX,
   CUSTOM_CRUISE_NAME,
