--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -79,5 +79,5 @@ module.exports = {
   LOWERING_ID_PLACEHOLDER,
   LOWERING_ID_REGEX,
   CUSTOM_CRUISE_NAME,
-  CUSTION_LOWERING_NAME
+  CUSTOM_LOWERING_NAME
 }
