--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -45,7 +45,7 @@ const DISABLE_EVENT_LOGGING = false;
 // Placeholder text displayed in CruiseID textfield "i.e. OXR20210101"
 const CRUISE_ID_PLACEHOLDER = "";
 
-// RegExp object to use when verifying CruiseID i.e. RegExp(^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
+// RegExp object to use when verifying CruiseID i.e. RegExp(/^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
 const CRUISE_ID_REGEX = null;
 
 // Placeholder text displayed in LoweringID textfield "i.e. CHR0001"
