--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.0",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-datetime": "^2.16.3",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.14.0",
     "react-file-reader": "^1.1.4",
     "react-filepond": "^7.1.1",
@@ -60,7 +60,6 @@
     "redux-modal": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "seamless-immutable": "^7.1.4",
-    "typeface-roboto": "0.0.75",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
@@ -70,6 +69,7 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.12.13",
+    "@fontsource/roboto": "^4.2.1",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
