updated mini-css-extract version

--- a/webpack.config.js.dist
+++ b/webpack.config.js.dist
@@ -30,7 +30,6 @@ module.exports = {
     }),
     new CopyPlugin({
       patterns: [
-        { from: path.resolve(__dirname, 'node_modules/typeface-roboto/files/'), to: 'style/fonts' },
         { from: path.resolve(__dirname, 'node_modules/leaflet/dist/images/'), to: 'style/images' },
         { from: path.resolve(__dirname, 'src/assets/images/'), to: 'images' },
       ]
@@ -112,5 +111,9 @@ module.exports = {
         ]
       }
     ]
-  }
+  },
+  node: {
+    Buffer: false,
+    process: false,
+  },
 };
