--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "eslint": "^7.22.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-redux": "^3.3.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.2",
