--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sealog-client-vehicle",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "license": "MIT",
   "description": "Sealog Client intended for use with vehicles deployed from research vessels such as ROVs, AUVs and HOVs",
   "bugs": {
@@ -42,6 +42,7 @@
     "moment-duration-format": "^2.3.2",
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
+    "pretty-bytes": "^5.6.0",
     "rc-slider": "^9.7.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.5.2",
