--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eventlogging"
   ],
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@hapi/nes": "^12.0.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
