--- a/src/client_config.js.dist
+++ b/src/client_config.js.dist
@@ -5,7 +5,7 @@ const API_ROOT_URL = (typeof window !== 'undefined') &&
   `http://${window.location.hostname}:8000/sealog-server`;
 const WS_ROOT_URL = (typeof window !== 'undefined') &&
   `ws://${window.location.hostname}:8000/ws`;
-
+  
 // Change this if not hosting the client at the webserver's document root i.e. '/sealog/'
 const ROOT_PATH = "/sealog/";
 
@@ -20,7 +20,7 @@ const RECAPTCHA_SITE_KEY = "";
 const LOGIN_SCREEN_TXT = "Sealog provides the Oceanographic Research community with an open-source tool for recording, reviewing, and exporting insitu scientific and operational observations.";
 
 // Image file shown on the login page.  This image needs to be saved in the ./dist/images folder
-const LOGIN_IMAGE = "";
+const LOGIN_IMAGE = "Subastian_Profile.png";
 
 // Text show on the main page above the cruise list.
 const MAIN_SCREEN_HEADER = "Welcome to Sealog";
@@ -28,10 +28,10 @@ const MAIN_SCREEN_HEADER = "Welcome to Sealog";
 const MAIN_SCREEN_TXT = "Please select a cruise from the list below.  Once a cruise is selected please select a lowering from the list of lowerings associated with that cruise that appear at the bottom of the cruise information panel.  Selecting a lowering will open the lowering information panel.  At the bottom of the cruise information panel there will be links for proceeding to the lowering replay section, the lowering review section and the lowering gallery section of Sealog. If at any time you wish to return to this page please click the \"Review Cruises/Lowerings\" text in upper navigation bar.";
 
 // Title displayed on the left side of the title bar
-const HEADER_TITLE = `Sealog for Vehicles v${Pkg.version}`;
+const HEADER_TITLE = `Sealog - Subastian`;
 
 // Set default vessel
-const DEFAULT_VESSEL = "";
+const DEFAULT_VESSEL = "R/V Falkor";
 
 // Use an internal tile server (true), or pull tiles directly from the Internet (false).
 const USE_MAPTILE_PROXY = false;
@@ -43,22 +43,22 @@ const USE_ACCESS_CONTROL = false;
 const DISABLE_EVENT_LOGGING = false;
 
 // Placeholder text displayed in CruiseID textfield "i.e. OXR20210101"
-const CRUISE_ID_PLACEHOLDER = "";
+const CRUISE_ID_PLACEHOLDER = "i.e. FK210101";
 
 // RegExp object to use when verifying CruiseID i.e. RegExp(/^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
-const CRUISE_ID_REGEX = null;
+const CRUISE_ID_REGEX = RegExp(/^FK[0-9]{2}[0-1][0-9][0-3][0-9]$/);
 
 // Placeholder text displayed in LoweringID textfield "i.e. CHR0001"
-const LOWERING_ID_PLACEHOLDER = "";
+const LOWERING_ID_PLACEHOLDER = "i.e. S0319";
 
 // RegExp object to use when verifying LoweringID i.e. RegExp(/^CHR[0-9]{4}$/)
-const LOWERING_ID_REGEX = null;
+const LOWERING_ID_REGEX = RegExp(/^S[0-9]{4}$/);
 
 // What to call "cruise/cruises", format: null OR ["single version","plural version"] use lowercase
 const CUSTOM_CRUISE_NAME = null;
 
 // What to call "lowering/lowerings", format: null OR ["single version","plural version"] use lowercase
-const CUSTOM_LOWERING_NAME = null;
+const CUSTOM_LOWERING_NAME = "dive/dives";
 
 module.exports = {
   API_ROOT_URL,
