--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@fontsource/roboto": "^4.5.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "babel-eslint": "^10.1.0",
