--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # For multi-platform builds
+      # https://github.com/docker/build-push-action/blob/master/docs/advanced/multi-platform.md
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+
       - name: Initialize
         id: init
         run: |
