--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,26 +9,31 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      # For multi-platform builds
+      # https://github.com/docker/build-push-action/blob/master/docs/advanced/multi-platform.md
+      - uses: docker/setup-qemu-action@v1
+      - uses: docker/setup-buildx-action@v1
+
       - name: Initialize
         id: init
         run: |
           # Determine whether to push to Docker Hub based on the event type
           case "${{ github.event_name }}" in
             push)
-              DOCKER_PUSH=yes ;;
+              DOCKER_PUSH=true ;;
             *)
-              DOCKER_PUSH=no ;;
+              DOCKER_PUSH=false ;;
           esac
 
           # Map git ref branch or tag name to Docker tag version
           case "${{ github.ref }}" in
             # Do not push upstream branches and tags to Docker Hub
             refs/heads/upstream/*|refs/tags/upstream/*)
-              DOCKER_PUSH=no ;;
+              DOCKER_PUSH=false ;;
 
             # Do not push pull request branches
             refs/pulls/*)
-              DOCKER_PUSH=no ;;
+              DOCKER_PUSH=false ;;
 
             refs/heads/master)
               DOCKER_TAG=latest ;;
@@ -42,30 +47,30 @@ jobs:
           GIT_REVISION=$(git rev-parse HEAD)$(git diff --quiet || echo "-dirty")
 
           echo ::set-output name=docker_push::$DOCKER_PUSH
+          echo ::set-output name=docker_repo::whoi/$(basename "${{ github.repository }}")
           echo ::set-output name=docker_tag::$DOCKER_TAG
+          echo ::set-output name=docker_platforms::linux/amd64,linux/arm64
           echo ::set-output name=git_source::$GIT_SOURCE
           echo ::set-output name=git_revision::$GIT_REVISION
 
-      - name: Build the Docker image
-        run: |
-          docker-compose build \
-            --build-arg GIT_SOURCE=${{ steps.init.outputs.git_source }} \
-            --build-arg GIT_REVISION=${{ steps.init.outputs.git_revision }}
-
-      # There aren't any tests yet...
-      # - name: Run test suite
-      #   run: docker-compose run sealog-client npm test
-
       - name: Log into registry
-        if: steps.init.outputs.docker_push == 'yes'
-        uses: azure/docker-login@v1
+        if: steps.init.outputs.docker_push == 'true'
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USER }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Push to registry
-        if: steps.init.outputs.docker_push == 'yes'
-        run: |
-          IMAGE="whoi/ndsf-sealog-client:${{ steps.init.outputs.docker_tag }}"
-          docker tag oceandatatools/sealog-client-vehicle:latest "$IMAGE"
-          docker push "$IMAGE"
+      - name: Build (and maybe push) the Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: ${{ steps.init.outputs.docker_platforms }}
+          push: ${{ steps.init.outputs.docker_push }}
+          tags: ${{ steps.init.outputs.docker_repo }}:${{ steps.init.outputs.docker_tag }}
+          build-args: |
+            GIT_SOURCE=${{ steps.init.outputs.git_source }}
+            GIT_REVISION=${{ steps.init.outputs.git_revision }}
+
+      # There aren't any tests yet...
+      # - name: Run test suite
+      #   run: docker-compose run sealog-client npm test
