--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sealog-client-vehicle",
-  "version": "2.1.3",
+  "name": "ndsf-sealog-client",
+  "version": "3.0.0",
   "license": "MIT",
-  "description": "Sealog Client intended for use with vehicles deployed from research vessels such as ROVs, AUVs and HOVs",
+  "description": "NDSF edition of the Sealog event logging web client",
   "bugs": {
-    "url": "https://github.com/oceandatatools/sealog-client-vehicle/issues"
+    "url": "https://github.com/whoigit/ndsf-sealog-client/issues"
   },
   "main": "index.js",
   "scripts": {
@@ -14,12 +14,12 @@
     "lint": "eslint . --ext .js",
     "lint-fix": "eslint . --ext .js --fix"
   },
-  "author": "Webb Pinner",
-  "homepage": "https://github.com/oceandatatools/",
-  "private": false,
+  "author": "Woods Hole Oceanographic Institution",
+  "homepage": "https://github.com/whoigit/ndsf-sealog-client",
+  "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/oceandatatools/sealog-client-vehicle.git"
+    "url": "https://github.com/whoigit/ndsf-sealog-client.git"
   },
   "keywords": [
     "react",
