--- a/package.json
+++ b/package.json
@@ -6,92 +6,72 @@
   "bugs": {
     "url": "https://github.com/whoigit/ndsf-sealog-client/issues"
   },
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack serve --mode development --node-env development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --node-env production",
-    "lint": "eslint . --ext .js",
-    "lint-fix": "eslint . --ext .js --fix"
-  },
   "author": "Woods Hole Oceanographic Institution",
-  "homepage": "https://github.com/whoigit/ndsf-sealog-client",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/whoigit/ndsf-sealog-client.git"
   },
-  "keywords": [
-    "react",
-    "redux",
-    "eventlogging"
-  ],
   "dependencies": {
+    "@fontsource/roboto": "^4.5.0",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@hapi/nes": "^12.0.4",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "connected-react-router": "^6.9.1",
-    "filepond": "^4.29.0",
+    "bootstrap": "^4.6.1",
+    "connected-react-router": "^6.9.2",
     "highcharts": "^9.2.1",
     "highcharts-react-official": "^3.0.0",
-    "immutable": "^3.8.2",
-    "jquery": "^3.6.0",
     "js-file-download": "^0.4.12",
     "leaflet": "^1.7.1",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "path": "^0.12.7",
-    "popper.js": "^1.16.1",
-    "pretty-bytes": "^5.6.0",
     "rc-slider": "^9.7.2",
-    "react": "^16.14.0",
-    "react-bootstrap": "^1.6.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-copy-to-clipboard": "^5.0.4",
     "react-datetime": "^3.0.4",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-file-reader": "^1.1.4",
     "react-filepond": "^7.1.1",
     "react-google-recaptcha": "^2.1.0",
     "react-leaflet": "^2.8.0",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.1",
+    "react-scripts": "^4.0.3",
+    "redux": "^4.1.2",
     "redux-form": "^8.3.7",
     "redux-modal": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "seamless-immutable": "^7.1.4",
     "universal-cookie": "^4.0.4"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.15.3",
-    "@fontsource/roboto": "^4.5.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-redux": "^3.3.2",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.0",
-    "process": "^0.11.10",
-    "sass": "~1.32.13",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2"
+    "eslint-plugin-react-redux": "^3.3.4",
+    "sass": "~1.32.13"
   }
 }
