Build a portable application that can be served from any path
Previously, the ROOT_PATH configuration option had to be hardcoded to the path
under which Sealog would be served, e.g., /sealog/. This added complexities to
how the build process worked, how Nginx had to be configured, etc.

  - ROOT_PATH is now derived automatically from the URL at which the JS bundle
    is loaded.

  - Sealog is now built at Docker container build time, not at run time, so
    the container now starts instantly.

  - The Nginx config no longer has to be patched to match ROOT_PATH.

There is a regression in that the configuration files are now baked in at
build time and cannot be overridden. This will be resolved.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,10 +2,8 @@ server {
     listen 80;
     server_name sealog-server;
 
-    # The /docker-entrypoint.d/99-build-sealog.sh script will replace
-    # %ROOT_PATH% with the value set in the client_config.js configuration file.
-    location %ROOT_PATH% {
-        alias /usr/src/app/build/;
-        try_files $uri $uri/ %ROOT_PATH%/index.html;
+    location /sealog/ {
+        alias /usr/src/app/;
+        try_files $uri $uri/ /sealog/index.html;
     }
 }
