--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@hapi/nes": "^12.0.4",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.1",
+    "client_config": "./src/shims/client_config",
     "connected-react-router": "^6.9.2",
     "highcharts": "^9.2.1",
     "highcharts-react-official": "^3.0.0",
     "js-file-download": "^0.4.12",
     "leaflet": "^1.7.1",
+    "map_tilelayers": "./src/shims/map_tilelayers",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "rc-slider": "^9.7.2",
