--- a/config/client_config.js.dist
+++ b/config/client_config.js.dist
@@ -44,16 +44,16 @@ window.client_config = {
     // Remove ability to add new events
     DISABLE_EVENT_LOGGING:  false,
 
-    // Placeholder text displayed in CruiseID textfield "i.e. OXR20210101"
+    // Placeholder text displayed in CruiseID textfield "e.g., OXR20210101"
     CRUISE_ID_PLACEHOLDER:  "",
 
-    // RegExp object to use when verifying CruiseID i.e. RegExp(/^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
+    // RegExp object to use when verifying CruiseID e.g., RegExp(/^OXR20[0-9]{2}[0-1][0-9][0-3][0-9]$/)
     CRUISE_ID_REGEX:  null,
 
-    // Placeholder text displayed in LoweringID textfield "i.e. CHR0001"
+    // Placeholder text displayed in LoweringID textfield "e.g., CHR0001"
     LOWERING_ID_PLACEHOLDER:  "",
 
-    // RegExp object to use when verifying LoweringID i.e. RegExp(/^CHR[0-9]{4}$/)
+    // RegExp object to use when verifying LoweringID e.g., RegExp(/^CHR[0-9]{4}$/)
     LOWERING_ID_REGEX:  null,
 
     // What to call "cruise/cruises", format: null OR ["single version","plural version"] use lowercase
