--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   ],
   "dependencies": {
     "@hapi/nes": "^12.0.4",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "connected-react-router": "^6.9.1",
-    "filepond": "^4.29.0",
-    "highcharts": "^9.2.1",
-    "highcharts-react-official": "^3.0.0",
+    "axios": "^0.22.0",
+    "bootstrap": "^4.6.1",
+    "connected-react-router": "^6.9.2",
+    "filepond": "^4.30.3",
+    "highcharts": "^9.3.3",
+    "highcharts-react-official": "^3.1.0",
     "immutable": "^3.8.2",
     "jquery": "^3.6.0",
     "js-file-download": "^0.4.12",
@@ -43,55 +43,55 @@
     "path": "^0.12.7",
     "popper.js": "^1.16.1",
     "pretty-bytes": "^5.6.0",
-    "rc-slider": "^9.7.2",
+    "rc-slider": "^9.7.5",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.4",
     "react-copy-to-clipboard": "^5.0.4",
-    "react-datetime": "^3.0.4",
+    "react-datetime": "^3.1.1",
     "react-dom": "^16.14.0",
     "react-file-reader": "^1.1.4",
     "react-filepond": "^7.1.1",
     "react-google-recaptcha": "^2.1.0",
     "react-leaflet": "^2.8.0",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.1.1",
-    "redux-form": "^8.3.7",
+    "react-redux": "^7.2.6",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
+    "redux": "^4.1.2",
+    "redux-form": "^8.3.8",
     "redux-modal": "^4.0.0",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.1",
     "seamless-immutable": "^7.1.4",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.15.3",
-    "@fontsource/roboto": "^4.5.0",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/runtime": "^7.17.2",
+    "@fontsource/roboto": "^4.5.3",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^9.1.0",
+    "css-loader": "^6.7.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-react-redux": "^3.3.2",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.2.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-redux": "^3.3.4",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "process": "^0.11.10",
-    "sass": "~1.32.13",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2"
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
